<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#58ace2"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/register_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp" 
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/username"
            android:hint="@string/enter_username"
            android:padding="7dp" 
            android:background="@drawable/user_bg"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="7dp" 
            android:background="@drawable/user_bg"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/remember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Remember_password"
            android:layout_weight="1"/>
         <CheckBox
            android:id="@+id/selflogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/automatic_logon"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/test_bg"
            android:text="@string/login" />

        <Button
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/test_bg"
            android:text="@string/register" 
            android:layout_marginLeft="25dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/find_password" />

</LinearLayout>